--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "electron": "^3.0.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "monaco-editor-webpack-plugin": "^1.5.4",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
@@ -26,5 +27,7 @@
     "webpack-cli": "^3.1.1",
     "webpack-dev-server": "^3.1.9"
   },
-  "dependencies": {}
+  "dependencies": {
+    "monaco-editor": "^0.14.3"
+  }
 }
