--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-"name": "rnide",
-"version": "1.0.0",
-"description": "",
-"main": "main.js",
-"scripts": {
-  "start": "./node_modules/.bin/webpack; npm run electron",
-  "build": "webpack --save production react-scripts",
-  "eject": "react-scripts eject",
+  "name": "rnide",
+  "version": "1.0.0",
+  "description": "",
+  "main": "main.js",
+  "scripts": {
+    "start": "./node_modules/.bin/webpack; npm run electron",
+    "build": "webpack --save production react-scripts",
+    "eject": "react-scripts eject",
     "electron": "electron .",
     "electron-dev": "concurrently \"BROWSER=none npm start\" \"wait-on http://localhost:3000 && electron .\""
   },
@@ -19,18 +19,19 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.2",
     "electron": "^3.0.0",
+    "electron-builder": "^20.28.4",
+    "electron-is-dev": "^1.0.1",
+    "file-loader": "^2.0.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "monaco-editor-webpack-plugin": "^1.5.4",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-scripts": "1.1.5",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.1",
-    "webpack-dev-server": "^3.1.9",
-    "react-scripts": "1.1.5",
-    "electron-builder": "^20.28.4",
-    "electron-is-dev": "^1.0.1"
+    "webpack-dev-server": "^3.1.9"
   },
   "dependencies": {
     "monaco-editor": "^0.14.2",
