--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "css-loader": "^1.0.0",
     "monaco-editor": "^0.14.2",
     "react": "^16.5.2",
+    "react-bootstrap": "^0.32.4",
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
     "react-treebeard": "^3.1.0",
