--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.1.0",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.2",
+    "babel-polyfill": "^6.26.0",
     "electron": "^3.0.2",
     "electron-builder": "^20.28.4",
     "electron-devtools-installer": "^2.2.4",
